fixed videos on resources page so they are responsive on mobile

--- a/app/assets/stylesheets/css/custom.css.scss
+++ b/app/assets/stylesheets/css/custom.css.scss
@@ -53,6 +53,20 @@
 	height: 100%;
 }
 
+.video-responsive{
+    overflow:hidden;
+    padding-bottom:56.25%;
+    position:relative;
+    height:0;
+}
+.video-responsive iframe{
+    left:0;
+    top:0;
+    height:100%;
+    width:100%;
+    position:absolute;
+}
+
  /* Centering video wrapper css end */
 
 .messagebox {height: 300px;}
